src/styles/modules/presentation.less
.carousel-presentation {

    .icon-grid {
        width: 415px;
        margin: 0px auto;
        display: block;

        .icon-grid-item {
            margin-bottom: 0px;
            width: 67px;

            .sprite {
                margin: 0px auto;
            }

            @media screen and (max-width: @screen-sm-max) { // Tablet + Phone
                &.is-active {
                    background: #00CC99;
                }
            }
        }

        @media screen and (max-width: 550px) { // Phone Portrait (not strict)
            width: 207px;
            .row-mobile {
                float: left;
                clear: both;
            }
        }
    }

    .nav {
        margin-top: 15px;
        padding: 6px;
        @media screen and (max-width: @screen-xs-max) { // Phone
            margin-bottom: 20px;
        }
        &.nav-previous {
            float: right;
            @media screen and (min-width: @screen-md-max) { // Large Desktop
                margin-right: -50px;
            }
            @media screen and (max-width: @screen-xs-max) { // Phone
                float: left;
            }
        }
        &.nav-next {
            float: left;
            @media screen and (min-width: @screen-md-max) { // Large Desktop
                margin-left: -50px;
            }
            @media screen and (max-width: @screen-xs-max) { // Phone
                float: right;
            }
        }
    }

    .owl-carousel {
        margin-top: 0px;
    }

    .item {
        padding: 20px;
    }

    .title {
        margin: 10px 0px 20px 0px;
        text-align: center;
        border-bottom: 1px solid #efefef;
        padding-bottom: 15px;
    }

    .secondary {
        color: #c0c0c0;
    }

    p {
        font-size: 18px;
        line-height: 26px;
        margin-bottom: 20px;
    }

    h4 {
        font-size: 16px;
        font-weight: bold;
        text-align: center;
        margin-top: 0px !important;
    }

    .sticky {
        padding: 8px 12px;
        border: 1px solid #efefef;
        border-left: 3px solid #00CC99;
        background: #f7f7f7;
        margin-top: 20px;
        margin-bottom: 30px;
    }

    .info-box {
        margin: 0px auto;
        width: 275px;
        float: none;

        .caption {
            font-size: 13px;
            line-height: 18px;
            text-align: center;
        }

        &.info-box-small {
            width: 230px;
        }

        &.info-box-xsmall {
            width: 180px;
        }

        &.info-box-left {
            float: left;
            margin: 0px;
        }
        &.info-box-right {
            float: right;
            margin: 0px;
        }

        @media screen and (max-width: @screen-sm-max) and (min-width: @screen-xs-max) { // Tablet
            width: auto;
        }
        @media screen and (max-width: @screen-xs-max) { // Phone
            display: block;
            margin: 0px auto 35px auto;

            &.info-box-left, &.info-box-right {
                float: none;
                margin: 0px auto 35px auto;
            }
        }
    }

    .question {
        margin-top: 4px;
        margin-bottom: 10px;
    }
    .answer {
        font-size: 15px;
        color: #999;
        padding-left: 14px;
    }


    .slide-intro {
        @media screen and (max-width: @screen-sm-max) { // Tablet + Phone
            img {
                margin: 0px auto 10px auto;
                display: block;
            }
            .sticky {
                margin-bottom: 10px;
            }
        }
    }
    .slide-interests {
        @media screen and (min-width: 600px) and (max-width: @screen-sm-max) { // Phone Landscape / Tablet
            .content-column {
                float: left;
                width: 33%;
            }
        }
        @media screen and (max-width: 599px) { // Phone Portrait
            .row {
                margin-top: 0px;
            }
        }
    }
    .slide-sport {
        @media screen and (max-width: @screen-md-max) and (min-width: @screen-sm-max) { // Small desktop
            .info-box {
                .info-box.info-box-xsmall;
            }
        }
        @media screen and (max-width: @screen-sm-max) { // Tablet + Phone
            .side-by-side-content-column {
                float: left;
                margin-bottom: 25px;
            }
        }
    }
    .slide-random {
        @media screen and (max-width: @screen-sm-max) { // Tablet + Phone
            .fact {
                float: left;
                width: 100%;
                margin-bottom: 25px;
                .column-image {
                    float: left;
                }
                .column-text {
                    float: left;
                }
            }
        }
        @media screen and (max-width: 599px) { // Phone Portrait
            .fact {
                position: relative;
                .column-image {
                    width: 100%;
                    text-align: center;
                    position: absolute;
                    top: 0%;
                }
                .column-text {
                    width: 100%;
                    margin-top: 130px;
                }
            }
        }
    }
    .slide-thanks {
        .photos {
            margin: 0px auto;
            width: 534px;
            img {
                height: 250px;
                margin-top: 15px;
                &:first-child {
                    margin-right: 10px;
                }
            }
        }
    }

}

.lt-ie10 {
    // Pictures of Merlin is full page width on IE9 without fix
    .carousel-presentation .slide-thanks .photos img {
        width: 333px;
        height: 250px;
        display: inline;
        &:first-child {
            width: 187px;
        }
    }
}

